ShardingCatalogManager::removeShard incorrectly assumes that the shard id query will return results

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.3
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2019-12-02, Sharding 2019-12-16
    • 24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Even though the lookup in _configsvrRemoveShard might have returned a shard object, due to concurrently running removeShard or due to the ShardRegistry not being causally-consistent, it could happen that the particular shard is removed by the time the execution reaches this line later on in the command.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: