SERVER-44893 In `removeShard` check whether the shard exists before querying the in-use zones